<resources>
    <string name="app_name">mvpdemo</string>

    <!--首页header信息-->
    <string name="main_header_scan">扫一扫</string>
    <string name="main_header_search">搜索需要的藏品</string>
    <string name="main_header_message">消息</string>

    <!--首页-->
    <string name="main_bar_home">首页</string>
    <string name="main_bar_map">事务</string>
    <string name="main_bar_center">资讯</string>
    <string name="main_bar_find">安全</string>
    <string name="main_bar_user">我的</string>
</resources>
